@@ -23,6 +23,7 @@ AC_ARG_WITH(mm,
 		AC_ADD_INCLUDE($MM_DIR/include)
 		AC_DEFINE(HAVE_LIBMM, 1)
 		MM_RESULT=yes
+		PHP_EXTENSION(ps_mm)
 	fi
 ])
 AC_MSG_RESULT($MM_RESULT)
