@@ -32,14 +32,20 @@
 
 #ifdef HAVE_LIBMM
 
+#include "php_session.h"
+
 extern ps_module ps_mod_mm;
 #define ps_mm_ptr &ps_mod_mm
+
+extern zend_module_entry php_session_mm_module;
+#define phpext_ps_mm_ptr &php_session_mm_module
 
 PS_FUNCS(mm);
 
 #else
 
 #define ps_mm_ptr NULL
+#define phpext_ps_mm_ptr NULL
 
 #endif
 
