@@ -1,6 +1,6 @@
 #! /bin/sh
 
-# $Id: genif.sh,v 1.6 1999-05-21 10:05:41 sas Exp $
+# $Id: genif.sh,v 1.7 1999-09-03 17:46:39 sas Exp $
 # replacement for genif.pl
 
 infile="$1"
@@ -16,15 +16,19 @@ fi
 module_ptrs=""
 includes=""
 
+olddir=`pwd`
+cd $srcdir
+
 for ext in ${1+"$@"} ; do
 	module_ptrs="	phpext_${ext}_ptr,\\\n$module_ptrs"
-	for pre in php3_ php_ php4_ zend_ "" ; do
-		hdrfile="ext/$ext/${pre}${ext}.h"
-		if test -f "$srcdir/$hdrfile" ; then
-			includes="#include \"$hdrfile\"\\\n$includes"
+	for header in ext/$ext/*.h ; do
+		if grep phpext_ $header >/dev/null 2>&1 ; then
+			includes="#include \"$header\"\\\n$includes"
 		fi
 	done
 done
+
+cd $olddir
 
 cat $infile | \
 	sed \
